--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Snake Tail Battle</title>
+  <title>Snake Tail Battle - Mobile Split Screen</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <style>
     html, body {
@@ -21,34 +21,29 @@
       overflow: hidden;
       background: #181818;
     }
-    #scoreTop, #scoreBottom {
+    #scoreText {
       position: absolute;
-      left: 0; width: 100vw;
-      text-align: center;
-      font-size: 1.4rem;
+      top: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      color: #00ffff;
       font-family: 'Segoe UI', Arial, sans-serif;
       font-weight: bold;
-      z-index: 10;
-      pointer-events: none;
-      color: #00ffff;
-      text-shadow: 0 1px 4px #000, 0 0 8px #00ffff44;
+      font-size: 1.5rem;
       user-select: none;
-    }
-    #scoreTop { top: 8px; }
-    #scoreBottom { bottom: 8px; }
-    #splitLine {
-      position: absolute;
-      left: 0; width: 100vw;
-      top: 50%; height: 2px;
-      background: #00ffff55;
-      z-index: 9;
+      z-index: 10;
+      text-shadow: 0 0 8px #00ffffaa;
       pointer-events: none;
+      white-space: nowrap;
     }
     .menu-overlay {
       position: absolute;
       top: 0; left: 0; width: 100vw; height: 100vh;
-      display: flex; flex-direction: column; align-items: center; justify-content: center;
       background: rgba(18,18,18,0.92);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
       z-index: 50;
     }
     .menu-overlay button {
@@ -71,11 +66,8 @@
   </style>
 </head>
 <body>
-  <div id="gameContainer">
-    <div id="scoreTop"></div>
-    <div id="scoreBottom"></div>
-    <div id="splitLine"></div>
-  </div>
+  <div id="gameContainer"></div>
+  <div id="scoreText"></div>
   <script src="https://cdn.jsdelivr.net/npm/pixi.js@7.2.4/dist/pixi.min.js"></script>
   <script src="app.js"></script>
 </body>
